python-url-shortener/k8s/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: python-url-shortener-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: python-url-shortener-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - python-url-shortener-gateway
  http:
  - name: "authentication-route"
    match:
    - uri:
        prefix: "/auth"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: authentication-service.default.svc.cluster.local
        port:
          number: 80
    corsPolicy:
      allowCredentials: true
      allowMethods:
        - PUT
        - GET
        - POST
        - OPTIONS
      allowOrigin:
        - "*"
      allowHeaders:
        - authorization
        - content-type
  - name: "shortener-route"
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: shortener-service.default.svc.cluster.local
        port:
          number: 80
    corsPolicy:
      allowCredentials: true
      allowMethods:
        - PUT
        - GET
        - POST
        - OPTIONS
      allowOrigin:
        - "*"
      allowHeaders:
        - authorization
        - content-type
